@@ -4,6 +4,13 @@
  */
 package it.grid.storm.xmlrpc.converter.space;
 
+import java.util.Map;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+import com.google.common.collect.Maps;
+
 import it.grid.storm.griduser.GridUserInterface;
 import it.grid.storm.griduser.GridUserManager;
 import it.grid.storm.srm.types.TReturnStatus;
@@ -17,16 +24,10 @@ import it.grid.storm.synchcall.data.space.ReleaseSpaceOutputData;
 import it.grid.storm.xmlrpc.converter.Converter;
 import it.grid.storm.xmlrpc.converter.ParameterDisplayHelper;
 
-import java.util.HashMap;
-import java.util.Map;
-
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 /**
- * This class represents the Type Converter for ReleaseSpace function . This
- * class have get an input data from xmlrpc call anc convert it into a StoRM
- * Type that can be used to invoke the ReleaseSpaceManager
+ * This class represents the Type Converter for ReleaseSpace function . This class have get an input
+ * data from xmlrpc call anc convert it into a StoRM Type that can be used to invoke the
+ * ReleaseSpaceManager
  * 
  * @author Magnoni Luca
  * @author Cnaf -INFN Bologna
@@ -36,65 +37,58 @@ import org.slf4j.LoggerFactory;
 
 public class ReleaseSpaceConverter implements Converter {
 
-	/**
-	 * Logger
-	 */
-	private static final Logger log = LoggerFactory
-		.getLogger(ReleaseSpaceConverter.class);
+  /**
+   * Logger
+   */
+  private static final Logger log = LoggerFactory.getLogger(ReleaseSpaceConverter.class);
 
-	public ReleaseSpaceConverter() {
+  public ReleaseSpaceConverter() {
 
-	};
+  };
 
-	/**
-	 * This method return a ReleaseSpaceInputData created from input Hashtable
-	 * structure of an xmlrpc releaseSpace v2.1 call. ReleaseSpaceInputData can be
-	 * used to invoke ReleaseSpace Manager
-	 */
+  /**
+   * This method return a ReleaseSpaceInputData created from input Hashtable structure of an xmlrpc
+   * releaseSpace v2.1 call. ReleaseSpaceInputData can be used to invoke ReleaseSpace Manager
+   */
 
-	public InputData convertToInputData(Map inputParam) {
+  public InputData convertToInputData(Map<String, Object> inputParam) {
 
-		log
-			.debug("ReleaseSpaceConverter :Call received :Creation of SpaceResData = {}"
-				, inputParam.size());
-		log.debug("ReleaseSpaceConverter: Input Structure toString: {}"
-			, ParameterDisplayHelper.display(inputParam));
+    log.debug("ReleaseSpaceConverter :Call received :Creation of SpaceResData = {}",
+        inputParam.size());
+    log.debug("ReleaseSpaceConverter: Input Structure toString: {}",
+        ParameterDisplayHelper.display(inputParam));
 
-		GridUserInterface guser = GridUserManager.decode(inputParam);
+    GridUserInterface guser = GridUserManager.decode(inputParam);
 
-		TSpaceToken spaceToken = TSpaceToken.decode(inputParam,
-			TSpaceToken.PNAME_SPACETOKEN);
+    TSpaceToken spaceToken = TSpaceToken.decode(inputParam, TSpaceToken.PNAME_SPACETOKEN);
 
-		Boolean force = (Boolean) inputParam.get("forceFileRelease");
-		if (force == null) {
-			force = new Boolean(false);
-		}
+    Boolean force = (Boolean) inputParam.get("forceFileRelease");
+    if (force == null) {
+      force = Boolean.valueOf(false);
+    }
 
-		ReleaseSpaceInputData inputData;
-		if (guser != null) {
-			inputData = new IdentityReleaseSpaceInputData(guser, spaceToken,
-				force.booleanValue());
-		} else {
-			inputData = new AnonymousReleaseSpaceInputData(spaceToken,
-				force.booleanValue());
-		}
-		return inputData;
+    ReleaseSpaceInputData inputData;
+    if (guser != null) {
+      inputData = new IdentityReleaseSpaceInputData(guser, spaceToken, force.booleanValue());
+    } else {
+      inputData = new AnonymousReleaseSpaceInputData(spaceToken, force.booleanValue());
+    }
+    return inputData;
 
-	}
+  }
 
-	public Map convertFromOutputData(OutputData data) {
+  public Map<String, Object> convertFromOutputData(OutputData data) {
 
-		log
-			.debug("releaseSpaceConverter :Call received :Creation of XMLRPC Output Structure! ");
-		ReleaseSpaceOutputData outputData = (ReleaseSpaceOutputData) data;
+    log.debug("releaseSpaceConverter :Call received :Creation of XMLRPC Output Structure! ");
+    ReleaseSpaceOutputData outputData = (ReleaseSpaceOutputData) data;
 
-		// Creation of new Hashtable to return
-		Map outputParam = new HashMap();
+    // Creation of new Hashtable to return
+    Map<String, Object> outputParam = Maps.newHashMap();
 
-		TReturnStatus returnStatus = outputData.getStatus();
-		returnStatus.encode(outputParam, TReturnStatus.PNAME_RETURNSTATUS);
+    TReturnStatus returnStatus = outputData.getStatus();
+    returnStatus.encode(outputParam, TReturnStatus.PNAME_RETURNSTATUS);
 
-		// Return output Parameter structure
-		return outputParam;
-	}
+    // Return output Parameter structure
+    return outputParam;
+  }
 }
